src/test/ui/issue-15260.stderr
error[E0025]: field `a` bound multiple times in the pattern
  --> $DIR/issue-15260.rs:18:9
   |
LL |         a: _,
   |         ---- first use of `a`
LL |         a: _
   |         ^^^^ multiple uses of `a` in pattern

error[E0025]: field `a` bound multiple times in the pattern
  --> $DIR/issue-15260.rs:24:9
   |
LL |         a,
   |         - first use of `a`
LL |         a: _
   |         ^^^^ multiple uses of `a` in pattern

error[E0025]: field `a` bound multiple times in the pattern
  --> $DIR/issue-15260.rs:30:9
   |
LL |         a,
   |         - first use of `a`
LL |         a: _,
   |         ^^^^ multiple uses of `a` in pattern

error[E0025]: field `a` bound multiple times in the pattern
  --> $DIR/issue-15260.rs:32:9
   |
LL |         a,
   |         - first use of `a`
...
LL |         a: x
   |         ^^^^ multiple uses of `a` in pattern

error: aborting due to 4 previous errors

If you want more information on this error, try using "rustc --explain E0025"
